--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ path = "src/bin/main.rs"
 [dependencies]
 clap = "4.3.23"
 eval = "0.4.3"
-full_moon = { version = "0.18.1", features = ["lua54"] }
+# full_moon = { version = "0.18.1", features = ["lua54"] }
 glob = "0.3.1"
-mlua = { version = "0.9.0", features = ["lua54", "vendored"] }
 regex = "1.9.3"
